# skatkindprob

./: CMakeLists.txt  LICENSE  README.md  configure
.github/workflows/: ccpp.yml
src/: hand_tree.cpp  hand_tree.h  io.cpp  io.h  main.cpp  proof.cpp  proof.h  simulation.cpp  simulation.h
